# ScanForge

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CI-TEST-REPORTING.md  test-report-template.md
.github/workflows/: ci.yml  test-badge.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  DependencySummaryTable.cmake  DisplayStatus.cmake  Doxygen.cmake  ScanForgeConfig.cmake.in  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  LASProcessor.hpp  LZFCodec.hpp  LZFDecompressor.hpp  PCDLoader.hpp  PCDProcessor.hpp  PointCloudTypes.hpp
src/codec/: LZFCodec.hpp
src/tooling/: Logger.hpp
tests/: CMakeLists.txt
tests/UnitTests/: CMakeLists.txt  LASLoaderTest.cpp  LZFCodecTest.cpp  LzfDecompressorTest.cpp  MainTest.cpp  PCDWriterTest.cpp  PointCloudTypesTest.cpp
tests/data/: README.md  sample_compressed.pcd
